# mnemebrain-benchmark

./: .gitignore  BMB_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  data.json  index.html  leaderboard.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml  codeql.yml  pylint.yml  release.yml
docs/: adding-adapters.md  architecture.md  external-benchmarks.md  methodology.md  reproducing-results.md  scoring.md
leaderboard/: LEADERBOARD.md
leaderboard/reports/: BMB_REPORT.md  LITE_VS_FULL_REPORT.md
src/mnemebrain_benchmark/: __init__.py  __main__.py  adapter_factory.py  bmb_cli.py  dataset.py  interface.py  metrics.py  protocols.py  providers.py  runner.py  scoring.py  system_cli.py  system_report.py  system_runner.py
src/mnemebrain_benchmark/adapters/: __init__.py  langchain_buffer.py  mem0_adapter.py  mnemebrain_adapter.py  mnemebrain_lite_adapter.py  naive_baseline.py  openai_rag_adapter.py  (+2 more)
tests/: conftest.py  helpers.py  test_adapter_factory.py  test_bmb_external_integration.py  test_cli.py  test_cli_coverage.py  test_dataset.py  test_external_evals.py  test_interface.py  test_langchain_buffer.py  test_loader.py  test_mem0_adapter.py  test_metrics.py  test_mnemebrain_adapter.py  test_naive_baseline.py  test_openai_rag_adapter.py  test_protocols.py  test_rag_baseline.py  test_runner.py  test_schema.py  test_scoring.py  test_structured_memory.py  test_system_report.py  test_system_runner.py  test_task_evals.py  test_task_evals_runner.py  test_task_evals_scenarios.py
(+26 files in other folders)
