[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemebrain-benchmark"
version = "0.1.0a2"
description = "Vendor-neutral evaluation harness for memory systems"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
mnemebrain = ["mnemebrain>=1.0.0a1"]
mnemebrain-lite = ["mnemebrain-lite>=0.1.0a1"]
embeddings = ["sentence-transformers>=2.2,<4.0"]
mem0 = ["mem0ai>=0.1,<2.0"]
openai = ["openai>=1.0,<3.0"]
all = ["mnemebrain-benchmark[mnemebrain,mnemebrain-lite,embeddings,mem0,openai]"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "mypy>=1.13"]

[project.scripts]
mnemebrain-bmb = "mnemebrain_benchmark.bmb_cli:main"
mnemebrain-benchmark = "mnemebrain_benchmark.system_cli:main"
mnemebrain-task-eval = "mnemebrain_benchmark.task_evals.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemebrain_benchmark"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
